# JOBL

./: .gitignore  CNAME  Cargo.toml  Makefile  README.md  SPEC.md  index.html  robots.txt  sitemap.xml  style.css
.github/workflows/: docs.yml
docs/: CNAME  config.toml  index.html  spec.html
docs/content/: _index.md
docs/templates/: base.html
examples/: complete.jobl  minimal.jobl
spec/: index.html
src/: error.rs  lib.rs  parser.rs  types.rs
